--- a/css/afstemning.css
+++ b/css/afstemning.css
@@ -11,13 +11,6 @@
   width: 351px;
 }
 
-.vote-content h3 {
-  margin: 16.25px 16.25px 16.25px 16.25px;
-  color: #fff;
-  opacity: 0.7;
-  font-size: 14px;
-}
-
 .vote-content h2 {
   margin: 16.25px 16.25px 16.25px 16.25px;
   color: #fff;
@@ -26,8 +19,7 @@
 .vote-content h4 {
   margin: 16.25px 16.25px 16.25px 16.25px;
   color: #fff;
-  text-align: center;
-
+  font-size: 10px;
 }
 
 .vote-options {
@@ -47,6 +39,7 @@
   border-radius: 5px;
   background-color: #fff;
   margin: 16.25px 16.25px 16.25px 16.25px;
+  transition: .3s;
 }
 
 .vote-option:nth-child(odd) {
@@ -57,6 +50,7 @@
 
 .vote-option:nth-child(2) {
   margin-top: 16.25px;
+  margin-bottom: 0px;
 }
 
 .vote-option:first-child {
@@ -75,4 +69,27 @@
   width: 113.75px;
   height: 107.9px;
   margin-top: 16.25px;
+}
+
+.btn {
+  border-radius: 5px;
+  color: #ffffff;
+  font-size: 18px;
+  background: #EB8675;
+  margin: 16.25px 16.25px 16.25px 16.25px;
+  text-decoration: none;
+  text-align: center;
+}
+
+.btn h2 {
+  padding: 16.25px;
+}
+
+.btn a {
+  text-decoration: none;
+}
+
+.selected {
+  box-shadow:inset 0px 0px 0px 5px #EB8675;
+  transition: .3s;
 }
