Ændret struktur i afstemning
sider tilføjet, ny copy tilføjet og navne på html ændret

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 Primær #EB8675
 Grøn #9DD278
 Grå #808080
+blå #95D3D1
 */
 
 /*Font*/
@@ -229,3 +230,5 @@ height: 100%;
   height: 162.5px;
   width: 318.5px;
 }
+
+/* Afstemning */
