--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ height: 100%;
 
 /*App content - index*/
 .app-content {
-  background-color: #fff;
+  background-color: #95D3D1;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
