--- a/css/style.css
+++ b/css/style.css
@@ -251,4 +251,5 @@ height: 100%;
   margin-bottom: 8.125px;
   box-shadow: 0px 4px 10px 0px rgba(227,227,227,1);
   text-align: center;
+  border-radius: 10px;
 }
