--- a/css/afstemning.css
+++ b/css/afstemning.css
@@ -118,11 +118,16 @@
   text-align: center;
 }
 
-.tak-center h3, a {
+.tak-center h3{
   font-size: 12px;
   margin-top: 80px;
   margin-left: 20px;
   margin-right: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.tak-center a {
   color: #fff;
   text-decoration: none;
 }
