--- a/css/spil.css
+++ b/css/spil.css
@@ -165,7 +165,7 @@
   text-align: center;
   max-width: 75%;
   margin: 0px auto;
-  padding-top: 60px;
+  padding-top: 10px;
 }
 
 .gift-container h3 {
@@ -179,6 +179,7 @@
 
 .gift-container img {
   width: 40px;
+  margin-left: -7px;
 }
 
 .product-spotlight-circle {
@@ -189,11 +190,6 @@
   max-width: 210px;
   border-radius: 105px;
   margin: 30px auto;
-  animation: pulse 1s;
-  animation-delay: 0.5s;
-  animation-direction: alternate;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease;
   overflow: hidden;
 }
 
@@ -202,6 +198,13 @@
   height: 65%;
   width: 65%;
 }
+
+.product-spotlight-circle h2 {
+  color: #808080;
+  opacity: 0.6;
+  margin-top: 90px;
+}
+
 
 .rabat {
   height: 100px !important;
@@ -222,12 +225,31 @@
   height: 50px;
   border-radius: 45px;
   background-color: #EB8675;
-    position: absolute;
-    right: 80px;
-    bottom: 300px;
+  position: absolute;
+  right: 80px;
+  bottom: 310px;
 }
 
 .rabat-spot h2 {
   margin-top: 9px;
-margin-left: 9px;
+  margin-left: 9px;
+}
+
+.mini-spotlight {
+  background-color: #fff;
+  height: 120px;
+  width: 120px;
+  border-radius: 110px;
+  overflow: hidden;
+  display: inline-block;
+  margin: -30px 4px 0px 4px;
+}
+
+.mini-spotlight img {
+  width: 80px;
+  height: auto;
+  margin-top: 25px;
+  margin-left: 0px;
+  opacity: 0.5;
+
 }
