--- a/css/afstemning.css
+++ b/css/afstemning.css
@@ -125,9 +125,25 @@
   text-align: center;
 }
 
+.tak-center-klub {
+  background: #EB8675;
+  background-image: url('../media/ta_hjerte.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+
 .tak-center h3{
   font-size: 12px;
-  margin-top: 120px;
+  margin-top: 40px;
   margin-left: 20px;
   margin-right: 20px;
   color: #fff;
