--- a/css/spil.css
+++ b/css/spil.css
@@ -215,6 +215,7 @@
   height: 100px !important;
   width: auto !important;
   margin-top: 55px !important;
+  margin-left: 0px !important;
 }
 
 .game-content p {
